--- a/AceJobAgencySecurity/Views/Account/Login.cshtml
+++ b/AceJobAgencySecurity/Views/Account/Login.cshtml
@@ -9,6 +9,13 @@
     </div>
 }
 
+@if (ViewData.ModelState[""] != null)
+{
+    <div class="alert alert-danger">
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+    </div>
+}
+
 <form method="post" asp-action="Login">
     @Html.AntiForgeryToken()
 
